kubernetes/deployment.apps_photodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: photodb
  name: photodb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: photodb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: photodb
    spec:
      containers:
      - image: djjudas21/photodb
        imagePullPolicy: IfNotPresent
        name: photodb
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
