kubernetes/service_photodb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photodb
  name: photodb
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: photodb
  sessionAffinity: None
  type: NodePort
